added action to get ID Token

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "typescript-action",
-  "version": "0.0.0",
+  "name": "get-idtoken",
+  "version": "1.0.0",
   "private": true,
-  "description": "TypeScript template action",
+  "description": "Get ID token from GitHub OIDC provider",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
@@ -11,11 +11,11 @@
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
+    "all": "npm run build && npm run package && npm test"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/souravchanduka/TS_OIDC_IDToken.git"
   },
   "keywords": [
     "actions",
@@ -25,7 +25,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.4.0"
+    "@actions/core": "^1.4.0",
+    "@actions/http-client": "^1.0.11",
+    "@sourav_chanduka/oidc-client": "^1.0.9"
   },
   "devDependencies": {
     "@types/node": "^16.3.3",
