--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest",
-    "all": "npm run build && npm run package && npm test"
+    "all": "npm install @sourav_chanduka/oidc-client && npm run build && npm run package && npm test"
   },
   "repository": {
     "type": "git",
