--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "@actions/core": "^1.4.0",
     "@actions/http-client": "^1.0.11",
-    "@sourav_chanduka/core": "^1.4.1"
+    "@sourav_chanduka/core": "^1.4.1",
+    "@sourav_chanduka/oidc-client": "^1.0.16"
   },
   "devDependencies": {
     "@types/node": "^16.3.3",
